--- a/demo-app/AWSFriendsOnBrowser/src/assets/main.css
+++ b/demo-app/AWSFriendsOnBrowser/src/assets/main.css
@@ -3,9 +3,18 @@
   padding: 0px;
 }
 
-#app {
-  background-color: #fff3af;
-  width: 80%;
-  margin: 0 auto;
-  font-weight: normal;
+@media screen and (max-width: 700px){
+  #app {
+      background-color: #fff3af;
+      width: 100%;
+      font-weight: normal;
+    }
+}
+@media screen and (min-width: 701px) {
+  #app {
+      background-color: #fff3af;
+      width: 80%;
+      margin: 0 auto;
+      font-weight: normal;
+    }
 }
